<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AutodefinidosActivity!</string>
    <string name="app_name">Autodefinidos</string>
    <string name="autodefinidos">Autodefinidos</string>
    <string name="continuar_juego">Continuar Juego</string>
    <string name="dificil">Dificil</string>
    <string name="dificultad">Dificultad</string>
    <string name="en_otro_momento">En otro momento</string>
    <string name="error_nuevo_juego">Error al inicializar el Juego. Por favor, inténtelo de nuevo</string>
    <string name="facil">Fácil</string>
    <string name="grande">Grande</string>
    <string name="jugar">¡Jugar!</string>
    <string name="mediano">Mediano</string>
    <string name="no">No</string>
    <string name="normal">Normal</string>
    <string name="nuevo_juego">Nuevo Juego</string>
    <string name="obtener_ahora">¡Obtener versión PRO!</string>
    <string name="opciones">Opciones</string>
    <string name="paquenio">Pequeño</string>
    <string name="salir">Salir</string>
    <string name="salir_pregunta">¿Seguro que desea salir?</string>
    <string name="si">Sí</string>
    <string name="tamanio">Tamaño</string>
    <string name="version">Autodefinidos v.0.1</string>
    <string name="version_pago">Esta característica no está disponible en la versión FREE de Autodefinidos.\n\nSi desea poder disfrutar
        de ésta y muchas más funcionalidades consiga la versión PRO de autodefinidos, ¡sólo son 0,99€! \n\nAdemás, así ayudarás a que los desarrolladores
        sigan sacando más y más mejoras</string>
    

</resources>