<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <ImageView
        android:id="@+id/pong_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.55"
        android:contentDescription="@string/autodefinidos"
        android:src="@drawable/pong" >
    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.45"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/botonNuevoJuego"
            style="@style/botones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_juego" />

        <TextView
            android:id="@+id/botonContinuarJuego"
            style="@style/botones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continuar_juego" />

        <TextView
            android:id="@+id/botonSalir"
            style="@style/botones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salir" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.05"
        android:text="@string/version" />

</LinearLayout>