<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo_menu"
    android:orientation="vertical"
    android:weightSum="1" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:contentDescription="@string/autodefinidos"
        android:src="@drawable/logo" >
    </ImageView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/botonNuevoJuego"
                style="@style/botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuevo_juego" />

            <TextView
                android:id="@+id/botonContinuarJuego"
                style="@style/botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continuar_juego" />

            <TextView
                android:id="@+id/botonOpciones"
                style="@style/botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opciones" />

            <TextView
                android:id="@+id/botonSalir"
                style="@style/botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salir" />
        </LinearLayout>
    </ScrollView>

    <!-- <TextView -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_gravity="center" -->
    <!-- android:layout_weight="0.05" -->
    <!-- android:text="@string/version" /> -->

</LinearLayout>