<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E0E0E0"
    android:orientation="vertical"
    android:weightSum="10" >

    <TextView
        android:id="@+id/textoVersionPago"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="7dp"
        android:layout_weight="7"
        android:gravity="center"
        android:textColor="#A0A0A0"
        android:text="@string/version_pago"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="2" >

        <TextView
            android:id="@+id/obtenerPRO"
            style="@style/texto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="20dp"
            android:text="@string/obtener_ahora" />

        <TextView
            android:id="@+id/enOtroMomento"
            style="@style/texto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginBottom="7dp"
            android:text="@string/en_otro_momento" />
    </LinearLayout>

</LinearLayout>